# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: build&test.yml
page_loader/: __init__.py  functions.py  main.py
page_loader/scripts/: page_loader.py
tests/: test_page_loader.py
tests/fixtures/: result.html  test1.html
